--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/normalize.css">
     <link href="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v1.3.3/dist/jBox.all.min.css" rel="stylesheet">
+    <link rel="icon" type="image/jpg" href="../static/images/favicon.ico"/>
     <link rel="stylesheet" href="../static/css/main.css">
-  <title>Document</title>
+  <title>Chatbot | Edu-CV</title>
 </head>
 <body>
  
