--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <div class="col-md-12 text-center">
       <button id="todo" class="btn btn-info text-center oculto">No encuentras lo que quieres?</button>
     </div>
-    br><br>
+    
  </div>
 <div class="container edu">
   	<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -113,15 +113,15 @@
         <option data-subtext="Generales" class="boxoption"value="Como te llamas, quien eres">Como te llamas ?</option>
         <option data-subtext="Generales" class="boxoption"value="Datos de contacto">Datos de contacto</option>     
         <option data-subtext="Generales" class="boxoption"value="como funciona esta app">como funciona esta app</option>
-        <option data-subtext="Generales" class="boxoption"value="¿ manejas Programacion orientada a objetos?">¿ manejas Programacion orientada a objetos?</option>
-        <option data-subtext="Generales" class="boxoption"value="Formacion Bootcamps titulos certificados">Formacion Bootcamps titulos certificados</option>
+        <option data-subtext="Programación" class="boxoption"value="¿ manejas Programacion orientada a objetos?">¿ manejas Programacion orientada a objetos?</option>
+        <option data-subtext="Fomación" class="boxoption"value="Formacion Bootcamps titulos certificados">Formacion Bootcamps titulos certificados</option>
         <option data-subtext="Back-End" class="boxoption"value="Que sabes hacer en programacion Python">Que sabes hacer en programacion Python ?</option>
         <option data-subtext="Front-End" class="boxoption"value="Que sabes hacer en Front End">Que sabes hacer en Front End ?</option>
-        <option data-subtext="Front-End" class="boxoption"value="¿Por qué elegirte a ti y no a otro programador?">¿Por qué elegirte a ti y no a otro programador?</option>
-        <option data-subtext="Front-End" class="boxoption"value="¿Qué lenguajes de programación dominas y en qué proyectos lo has aplicado?">¿Qué lenguajes de programación dominas y en qué proyectos lo has aplicado?</option>
-        <option data-subtext="Front-End" class="boxoption"value="¿Deseas aprender a usar nuevas herramientas y tecnologías?">¿Deseas aprender a usar nuevas herramientas y tecnologías?</option>
-        <option data-subtext="Front-End" class="boxoption"value="¿Cuáles son tus 3 principales habilidades?">¿Cuáles son tus 3 principales habilidades?</option>
-        <option data-subtext="Front-End" class="boxoption"value="Experiencia laboral">Experiencia laboral</option>
+        <option data-subtext="Generales" class="boxoption"value="¿Por qué elegirte a ti y no a otro programador?">¿Por qué elegirte a ti y no a otro programador?</option>
+        <option data-subtext="Programación" class="boxoption"value="¿Qué lenguajes de programación dominas y en qué proyectos lo has aplicado?">¿Qué lenguajes de programación dominas y en qué proyectos lo has aplicado?</option>
+        <option data-subtext="Programación" class="boxoption"value="¿Deseas aprender a usar nuevas herramientas y tecnologías?">¿Deseas aprender a usar nuevas herramientas y tecnologías?</option>
+        <option data-subtext="Generales" class="boxoption"value="¿Cuáles son tus 3 principales habilidades?">¿Cuáles son tus 3 principales habilidades?</option>
+        <option data-subtext="Generales" class="boxoption"value="Experiencia laboral">Experiencia laboral</option>
       </select>
          
  </div>
