--- a/templates/index.html
+++ b/templates/index.html
@@ -108,13 +108,14 @@
 	</div><!-- panel-group -->
 	
 	<div style="display: none" id="preguntas">
-    <select id="todaslaspreguntas" class="selectpicker " data-show-subtext="true" data-live-search="true">
-        <option data-subtext="Preguntas" class="boxoption" value="Como te llamas, quien eres">PREGUNTAS CON RESPUESTA</option>
+    <h4>Generales / Formación /Programación / Back-end /Front-end</h4>
+    <select id="todaslaspreguntas" class="selectpicker " data-show-subtext="true" data-live-search="true" >
+        <option data-subtext="Generales" class="boxoption" value="Como te llamas, quien eres">PREGUNTAS CON RESPUESTA</option>
         <option data-subtext="Generales" class="boxoption"value="Como te llamas, quien eres">Como te llamas ?</option>
         <option data-subtext="Generales" class="boxoption"value="Datos de contacto">Datos de contacto</option>     
         <option data-subtext="Generales" class="boxoption"value="como funciona esta app">como funciona esta app</option>
         <option data-subtext="Programación" class="boxoption"value="¿ manejas Programacion orientada a objetos?">¿ manejas Programacion orientada a objetos?</option>
-        <option data-subtext="Fomación" class="boxoption"value="Formacion Bootcamps titulos certificados">Formacion Bootcamps titulos certificados</option>
+        <option data-subtext="Formación" class="boxoption"value="Formacion Bootcamps titulos certificados">Formacion Bootcamps titulos certificados</option>
         <option data-subtext="Back-End" class="boxoption"value="Que sabes hacer en programacion Python">Que sabes hacer en programacion Python ?</option>
         <option data-subtext="Front-End" class="boxoption"value="Que sabes hacer en Front End">Que sabes hacer en Front End ?</option>
         <option data-subtext="Generales" class="boxoption"value="¿Por qué elegirte a ti y no a otro programador?">¿Por qué elegirte a ti y no a otro programador?</option>
