--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
   <br>
     <h1 class="text-center">Chatbot Cv Eduardo Cabrera</h1>
     <h4 class="text-center">MVP Producto minimo viable</h4>
+    <h5 id="time">cccc</h5>
     <div class="col-md-12 text-center">
       <button id="todo" class="btn btn-info text-center oculto">No encuentras lo que quieres?</button>
     </div>
@@ -44,7 +45,7 @@
 					  <div class="d-flex flex-column">
               <p id="mensaje">Que quieres saber ?</p>
               <input type="text" id="search"  class="form-control" placeholder="type your question and press enter">
-              <button id="botonbuscar" class="btn-primary oculto" >click-me or press Enter</button>
+              <button id="botonbuscar" class="btn-primary oculto" onclick="server.hola()" >click-me or press Enter</button>
             </div>
 				</div>
 			</div>
