--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Last-Modified" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+    <meta http-equiv="Pragma" content="no-cache">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css/main.css">
     <title>Document</title>
@@ -22,7 +26,7 @@
           <div class="messages-content"></div>
         </div>
         <div class="message-box">
-          <textarea type="text" class="message-input" placeholder="Type message..." autofocus></textarea>
+          <textarea type="text" class="message-input" placeholder="Type your question..." autofocus></textarea>
           <button type="submit" class="message-submit">Send</button>
         </div>
       
