--- a/templates/chat.html
+++ b/templates/chat.html
@@ -8,9 +8,10 @@
     <meta http-equiv="Last-Modified" content="0">
     <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
     <meta http-equiv="Pragma" content="no-cache">
+    <link rel="icon" type="image/x-icon" href="../static/images/foto-chatbot-edu.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css/main.css">
-    <title>Document</title>
+    <title>Chatbot|Edu</title>
 
 </head>
 <body>
